# FolkPatch1

./: .gitignore  README_EN.md  auth.properties.template  build.gradle.kts  local.properties
.github/workflows/: build-debug.yml  build-release.yml
apd/src/: defs.rs  event.rs  module.rs  supercall.rs
app/: build.gradle.kts
app/src/main/java/me/bmax/apatch/: APatchApp.kt
app/src/main/java/me/bmax/apatch/ui/: MainActivity.kt
app/src/main/java/me/bmax/apatch/ui/component/: UmountConfig.kt
app/src/main/java/me/bmax/apatch/ui/screen/: Home.kt  HomeV4.kt  MyThemesScreen.kt
app/src/main/java/me/bmax/apatch/ui/viewmodel/: ThemeStoreViewModel.kt
app/src/main/java/me/bmax/apatch/util/: APatchCli.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-mgl/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr-rTR/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rAG/: strings.xml
app/src/main/res/values-zh-rAT/: strings.xml
app/src/main/res/values-zh-rCK/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/values-zh-rWC/: strings.xml
fpd/: Cargo.toml
fpd/src/: main.rs  prop_patch.rs  umount.rs
(+2 files in other folders)
