[package]
name = "fpd"
version = "1.0.0"
edition = "2024"
description = "Android system property patching and mount-point unmounting utility"
repository = "https://github.com/epicxafang/FolkPatch"
license = "MIT"

[dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
